test/e2e/features/servicelabelselector/testdata/positive-excluded-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: positive-excluded-service
  namespace: default
  labels:
    e2e.kgateway.dev/discovery: disabled
    e2e.kgateway.dev/excluded: "false"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: positive-excluded-service-route
  namespace: default
spec:
  parentRefs:
    - name: service-label-selector
  rules:
    - backendRefs:
        - name: positive-excluded-service
          port: 8080
